--- a/src/pages/chats/chats.scss
+++ b/src/pages/chats/chats.scss
@@ -5,21 +5,26 @@ html, body {
 
 .messenger {
     display: flex;
-    //background-color: red;
     height: 100%;
 
     .messenger__list {
-        flex-grow: .3;
-        background-color: green;
+        flex-grow: .2;
+
+        .messenger__item {
+            //display: flex;
+            background-color: green;
+            padding: 15px 25px;
+            //padding: 15px 25px;
+        }
     }
 
     .messenger__chat {
-        flex-grow: .7;
-        background-color: red;
+        flex-grow: .8;
     }
 }
 
 .messenger__header {
     display: flex;
-    
+    //background-color: green;
+    padding: 15px 25px;
 }
