Main pages for the first sprint were implemented.

--- a/src/components/input/input.hbs
+++ b/src/components/input/input.hbs
@@ -1,4 +1,4 @@
 <div class="input">
-    <input id="input" name="{{ name }}" value="{{ value }}" type="{{ type }}" placeholder=" " />  
-    <label for="input">{{ placeholder }}</label>
+    <input id="{{ name }}_id" name="{{ name }}" type="{{ type }}" placeholder=" " />
+    <label for="{{ name }}_id">{{ placeholder }}</label>
 </div>
