--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,4 +7,5 @@
 
 @import './pages/login/login.scss';
 @import './pages/chats/chats.scss';
-// @import './partials/input/input.scss';
+@import './pages/create-account/create-account.scss';
+@import './pages/profile/profile.scss';
