--- a/src/components/button/button.hbs
+++ b/src/components/button/button.hbs
@@ -1,1 +1,3 @@
-<button class="button" type="button">{{ label }}</button>
+<button type="button" class="btn {{#if primary}}btn-primary{{/if}}">
+    {{ label }}
+</button>
