--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,5 +1,19 @@
-.button {
-    align-self: center;
+.btn {
     width: 100%;
-    background-color: red;
+    height: 44px;
+    font-size: 16px;
+    padding: 0;
+    margin-bottom: 20px;
+    cursor: pointer;
+
+    border: none;
+    border-radius: 10px;
+
+    background-color: white;
+    color: #6002ee;
+
+    &.btn-primary {
+        background-color: #7472F6;
+        color: white;
+    }
 }
