--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,9 +1,13 @@
 .card {
     display: flex;
     flex-flow: column;
-    //align-items: center;
-    width: 350px;
-    padding: 40px;
+
+    background-color: white;
+
+    width: 400px;
+    padding: 30px 50px 10px 50px;
+    box-sizing: border-box;
+
     border: 1px solid #a9a6a6;
-    border-radius: 6px;
+    border-radius: 10px;
 }
