--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,33 +1,31 @@
 .input {
-    background-color: red;
-    //width: 300px;
-    //display: flex;
+    display: flex;
     position: relative;
-    margin-bottom: 1.25em;
-    
+    margin-bottom: 20px;
+
     input {
-        height: 3em;
+        font-size: 20px;
+        padding: 16px 15px 5px 15px;
+        border-radius: 10px;
         border: 0;
-        border-bottom: 1px solid #90A4AE;
         outline: none;
         background-color: #EEEEEE;
-        padding-top: .75em;
 
         &:focus {
             background-color: #E0E0E0;
-            border-bottom: 1px solid #2962FF;
 
-            + label {
+            +label {
                 color: #2962FF;
             }
         }
 
-        &:focus, &:not(:placeholder-shown) {
+        &:focus,
+        &:not(:placeholder-shown) {
             align-self: flex-end;
 
-            + label {
+            +label {
                 padding-top: 0;
-                font-size: .75em;
+                font-size: 15px;
             }
         }
     }
@@ -35,14 +33,15 @@
     label {
         position: absolute;
         top: 0;
-        //left: 0;
-        padding-top: 1.1em;
+        font-size: 14pt;
+        padding-left: 15px;
+        padding-top: 10px;
         transition: all .3s;
-        //background-color: green;
+        pointer-events: none;
     }
 
-    input, label {
+    input,
+    label {
         width: 100%;
-        padding-left: .5em;
     }
 }
