--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,21 +1,23 @@
-html,
-body {
-    height: 100%;
-    margin: 0;
-}
-
 .profile-form {
     position: absolute;
     top: 20%;
     left: 50%;
     transform: translate(-50%);
 
-    .profile-form_card_header {
+    .profile-form__card__header {
         text-align: center;
         margin-bottom: 40px;
+
+        .logout-icon {
+            position: absolute;
+            left: 260px;
+            top: 40px;
+            right: 0;
+            bottom: 0;
+        }
     }
 
-    .profile-form_buttons {
+    .profile-form__buttons {
         display: flex;
         margin-top: 70px;
     }
