--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 @import './components/card/card.scss';
 @import './components/input/input.scss';
 @import './components/button/button.scss';
-@import './components/search/search.scss';
+@import './components/avatar/avatar.scss';
 
-@import './layouts/chat-card/chat-card.scss';
+@import './layouts/page/page.scss';
 
 @import './pages/login/login.scss';
 @import './pages/chats/chats.scss';
