--- a/src/layouts/page/page.scss
+++ b/src/layouts/page/page.scss
@@ -4,4 +4,12 @@ body {
     margin: 0;
 
     background-color: #EFE5FD;
+
+    .page__main {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+    }
 }
