--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,8 +1,5 @@
 .profile-form {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%);
+    position: relative;
 
     .profile-form__card__header {
         text-align: center;
